--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,7 @@ jobs:
       - name: Get clang 
         run: |
           echo Pulling clang
-          mkdir clang && cd clang
-          wget https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/android-10.0.0_r3/clang-r353983c.tar.gz
-          tar -xvf clang-r353983c.tar.gz
-          cd ..
+          git clone --depth=1 https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86 clang
 
       - name: Get NDK
         run: |
@@ -43,7 +40,7 @@ jobs:
         run: |
           export ARCH=arm64
           export SUBARCH=arm64
-          export CLANG_PATH=${pwd}/clang/clang-r353983c/bin
+          export CLANG_PATH=${pwd}/clang/clang-r399163/bin
           export PATH=${CLANG_PATH}:${PATH}
           export CLANG_TRIPLE=aarch64-linux-gnu-
           export CROSS_COMPILE=${pwd}/ndk/toolchains/aarch64-linux-android-4.9/prebuilt/linux-x86_64/bin/aarch64-linux-android-
