--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Running build script!
-
+      
       # Runs a set of commands using the runners shell
       - name: Get clang 
         run: |
@@ -34,8 +34,9 @@ jobs:
 
       - name: Get NDK
         run: |
-          git clone --depth=1  https://android.googlesource.com/platform/ndk ndk
-
+          wget https://dl.google.com/android/repository/android-ndk-r21d-linux-x86_64.zip
+          unzip android-ndk-r21d-linux-x86_64.zip
+          
       - name: Setting up environment
         run: |
           export ARCH=arm64
