--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,22 +30,20 @@ jobs:
       - name: Get clang 
         run: |
           echo Pulling clang
-          git clone --depth=1 https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86 clang
+          git clone --depth=1 https://github.com/kdrag0n/proton-clang.git clang
+#       - name: Get AnyKernel3
+#         run: |
+#           git clone --depth=1 https://github.com/pranavgoyanka/AnyKernel3.git
 
-      - name: Get NDK
-        run: |
-          wget https://dl.google.com/android/repository/android-ndk-r21d-linux-x86_64.zip
-          unzip android-ndk-r21d-linux-x86_64.zip
-          
-      - name: Setting up environment
+      - name: Setting up environment  
         run: |
           export ARCH=arm64
           export SUBARCH=arm64
-          export CLANG_PATH=${pwd}/clang/clang-r399163/bin
+          export CLANG_PATH=${PWD}/clang/bin
           export PATH=${CLANG_PATH}:${PATH}
-          export CLANG_TRIPLE=aarch64-linux-gnu-
-          export CROSS_COMPILE=${pwd}/ndk/toolchains/aarch64-linux-android-4.9/prebuilt/linux-x86_64/bin/aarch64-linux-android-
-          export CROSS_COMPILE_ARM32=/${pwd}/ndk/toolchains/arm-linux-androideabi-4.9/prebuilt/linux-x86_64/bin/arm-linux-androideabi-
+          export CC=clang
+          export CROSS_COMPILE=aarch64-linux-gnu-
+          export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
       
       - name: Cleaning directories
         run: |
